--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - CONFIG_USE_MONGODB_PASS
       - CONFIG_USE_MONGODB_ATLAS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   webapp:
     build: 
       context: ./webapp
@@ -137,7 +137,7 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   invoice:
     build: ./invoice
     restart: always
@@ -163,7 +163,7 @@ services:
       - AWS_COGNITO_USERPOOL_REGION
       - CONFIG_USE_APIURL
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   history:
     build: ./history
     restart: always
@@ -179,7 +179,7 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   sensor:
     build: ./sensor
     restart: always
@@ -196,7 +196,7 @@ services:
       - CONFIG_USE_MONGODB_PASS
       - CONFIG_USE_MONGODB_ATLAS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   configuration:
     build: ./configuration
     restart: always
@@ -212,7 +212,7 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   registration:
     build: ./registration
     restart: always
@@ -228,7 +228,7 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   ota:
     build: ./ota
     restart: always
@@ -251,7 +251,7 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
   loki:
     image: grafana/loki:1.4.1
     container_name: loki
@@ -266,7 +266,7 @@ services:
     image: grafana/promtail:1.4.1
     container_name: promtail
     volumes:
-      - "promtail-data:/home/ec2-user/promtail"
+      - "promtail-data:/var/log"
       - /var/log:/var/log
     command: -config.file=/etc/promtail/docker-config.yaml
     networks:
