--- a/nginx/src_test/nginx.conf
+++ b/nginx/src_test/nginx.conf
@@ -14,6 +14,11 @@ server {
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
     }
 
+    location /organization {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+    }
+
     location /account {
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
