--- a/_prometheus_grafana/docker-compose.yml
+++ b/_prometheus_grafana/docker-compose.yml
@@ -21,31 +21,13 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=12h'
+      - '--storage.tsdb.retention.time=8h'
       - '--web.enable-lifecycle'
-    restart: unless-stopped
+    restart: always
     expose:
       - 9090
     networks:
       - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
-
-#  alertmanager:
-#    image: prom/alertmanager:v0.20.0
-#    container_name: alertmanager
-#    volumes:
-#      - ./alertmanager:/etc/alertmanager
-#    command:
-#      - '--config.file=/etc/alertmanager/config.yml'
-#      - '--storage.path=/alertmanager'
-#    restart: unless-stopped
-#    expose:
-#      - 9093
-#    networks:
-#      - monitor-net
-#    labels:
-#      org.label-schema.group: "monitoring"
 
   nodeexporter:
     image: prom/node-exporter:v0.18.1
@@ -59,13 +41,11 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-    restart: unless-stopped
+    restart: always
     expose:
       - 9100
     networks:
       - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
 
   cadvisor:
     image: gcr.io/google-containers/cadvisor:v0.36.0
@@ -77,14 +57,11 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
-      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
-    restart: unless-stopped
+    restart: always
     expose:
       - 8090
     networks:
       - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
 
   grafana:
     image: grafana/grafana:6.7.3
@@ -96,24 +73,20 @@ services:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
-    restart: unless-stopped
+    restart: always
     expose:
       - 3000
     networks:
       - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
 
   pushgateway:
     image: prom/pushgateway:v1.2.0
     container_name: pushgateway
-    restart: unless-stopped
+    restart: always
     expose:
       - 9091
     networks:
       - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
 
   caddy:
     image: stefanprodan/caddy
@@ -128,8 +101,38 @@ services:
     environment:
       - ADMIN_USER=${ADMIN_USER:-admin}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-    restart: unless-stopped
+    restart: always
     networks:
       - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
+
+#  alertmanager:
+#    image: prom/alertmanager:v0.20.0
+#    container_name: alertmanager
+#    volumes:
+#      - ./alertmanager:/etc/alertmanager
+#    command:
+#      - '--config.file=/etc/alertmanager/config.yml'
+#      - '--storage.path=/alertmanager'
+#    restart: always
+#    expose:
+#      - 9093
+#    networks:
+#      - monitor-net
+#    labels:
+#      org.label-schema.group: "monitoring"
+
+#  loki:
+#    image: grafana/loki:1.4.1
+#    ports:
+#      - "3100:3100"
+#    command: -config.file=/etc/loki/local-config.yaml
+#    networks:
+#      - monitor-net
+
+#  promtail:
+#    image: grafana/promtail:1.4.1
+#    volumes:
+#      - /var/log:/var/log
+#    command: -config.file=/etc/promtail/docker-config.yaml
+#    networks:
+#      - monitor-net
