--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ _client_simulator/__pycache__
 redis/src/*
 webapp/src/ionicapp/www/js/env.js
 get_logs.py
+_test_regression/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
