--- a/webapp/src/ionicapp/package.json
+++ b/webapp/src/ionicapp/package.json
@@ -2,6 +2,9 @@
   "name": "iotapp",
   "version": "0.0.1",
   "description": "An Ionic project",
+  "scripts": {
+    "start": "ionic serve"
+  },
   "devDependencies": {
     "@ionic/lab": "2.0.6",
     "@ionic/v1-toolkit": "1.0.22",
