--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -236,6 +236,20 @@ services:
       - AWS_S3_FILE_FIRMWARE_UPDATES
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
+  heartbeat:
+    build: ./heartbeat
+    restart: always
+    networks:
+      - mydockernet
+    depends_on:
+      - rabbitmq
+      - mongodb
+    environment:
+      - CONFIG_USE_ECC
+      - CONFIG_USE_MQTT_DEFAULT_USER
+      - CONFIG_USE_MQTT_DEFAULT_PASS
+      - CONFIG_USE_MONGODB_USER
+      - CONFIG_USE_MONGODB_PASS
 networks:
   mydockernet:
     driver: bridge
