--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ start.sh
 stop.sh
 _client_simulator
 _client_simulator/__pycache__
-redis/src/*
+redis/src/redis-2.4.5-win32-win64/
 webapp/src/ionicapp/www/js/env.js
 get_logs.py
 _test_regression/*
