--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ stop.sh
 _client_simulator
 _client_simulator/__pycache__
 redis/src/redis-2.4.5-win32-win64/
+redis/src/dump.rdb
 webapp/src/ionicapp/www/js/env.js
 get_logs.py
 _test_regression/*
