--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,8 @@ dmypy.json
 .pyre/
 amazon_credentials.py
 restapi/src/.idea
+.project
+.pydevproject
+restapi/src/test
+password
+.git.bfg-report
