Add Braintree and S3promocode environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,10 @@ services:
       - PAYPAL_MODE
       - PAYPAL_CLIENT_ID
       - PAYPAL_CLIENT_SECRET
+      - BRAINTREE_MODE
+      - BRAINTREE_MERCHANT_ID
+      - BRAINTREE_PUBLIC_KEY
+      - BRAINTREE_PRIVATE_KEY
       - CONFIG_USE_MQTT_DEFAULT_USER
       - CONFIG_USE_MQTT_DEFAULT_PASS
       - CONFIG_USE_JWT_SECRET_KEY
@@ -63,6 +67,7 @@ services:
       - AWS_S3_FILE_I2C_DEVICES
       - AWS_S3_FILE_SENSOR_DEVICES
       - AWS_S3_FILE_FIRMWARE_UPDATES
+      - AWS_S3_FILE_PROMOCODE
       - AWS_COGNITO_OAUTH_DOMAIN
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
