--- a/nginx/src_test/nginx.conf
+++ b/nginx/src_test/nginx.conf
@@ -4,6 +4,16 @@ server {
     ssl_certificate /etc/nginx/conf.d/cert/cert.pem;
     ssl_certificate_key /etc/nginx/conf.d/cert/pkey.pem;
 
+    location /dashboards {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+    }
+
+    location /payment {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://restapi:8000; # REST-API access for mobile apps
+    }
+
     location /user {
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
