rename invoice manager to email manager

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,8 +141,8 @@ services:
       - CONFIG_USE_MONGODB_USER
       - CONFIG_USE_MONGODB_PASS
       - AWS_S3_FILE_SMS_COUNTRY_POINTS
-  invoice:
-    build: ./invoice
+  email:
+    build: ./email
     restart: always
     networks:
       - mydockernet
