--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,13 @@ build:
   stage: build
   script:
     - docker-compose down
-      docker-compose rm -f
-      docker network prune -f
-      docker-compose -f docker-compose.yml config
-      docker-compose build
+    - docker-compose rm -f
+    - docker network prune -f
+    - docker-compose -f docker-compose.yml config
+    - docker-compose build
 
 deploy:
+  stage: deploy
   script:
     - docker-compose up -d
 
