--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,9 @@ stages:
   - deploy
 
 before_script:
+  - pwd
   - echo $PATH
+  - echo $CONFIG_USE_APIURL
   - docker info
   - docker-compose --version
 
