--- a/nginx/src_prod/nginx.conf
+++ b/nginx/src_prod/nginx.conf
@@ -64,6 +64,11 @@ server {
         proxy_pass http://restapi:8000; # REST-API access for mobile apps
     }
 
+    location /webhook {
+        resolver 127.0.0.11 ipv6=off;
+        proxy_pass http://payment_webhook:8003; # webhook access for mobile apps
+    }
+
     location / {
         resolver 127.0.0.11 ipv6=off;
         proxy_pass http://webapp:8100; # Web app
