--- a/nginx/src_test/nginx.conf
+++ b/nginx/src_test/nginx.conf
@@ -4,68 +4,8 @@ server {
     ssl_certificate /etc/nginx/conf.d/cert/cert.pem;
     ssl_certificate_key /etc/nginx/conf.d/cert/pkey.pem;
 
-    location /dashboards {
+    location /webhook {
         resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /payment {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /user {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /organizations {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /organization {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /account {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /devices {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /devicegroups {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /mobile {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /others {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /firmware {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location /devicesimulator {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://restapi:8000; # REST-API access for mobile apps
-    }
-
-    location / {
-        resolver 127.0.0.11 ipv6=off;
-        proxy_pass http://webapp:8100; # Web app
+        proxy_pass http://payment_webhook:8003; # webhook access receive webhook notification from payment_3rd_party
     }
 }
