use 80 as no cert avaliable

--- a/nginx/src_test/nginx.conf
+++ b/nginx/src_test/nginx.conf
@@ -1,8 +1,8 @@
 server {
-    listen 443 ssl;
+    listen 80;
 
-    ssl_certificate /etc/nginx/conf.d/cert/cert.pem;
-    ssl_certificate_key /etc/nginx/conf.d/cert/pkey.pem;
+    #ssl_certificate /etc/nginx/conf.d/cert/cert.pem;
+    #ssl_certificate_key /etc/nginx/conf.d/cert/pkey.pem;
 
     location /webhook {
         resolver 127.0.0.11 ipv6=off;
