--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ before_script:
 build:
   stage: build
   script:
-    - docker-compose down
+    - docker-compose -f docker-compose-mini.yml down
     - docker-compose rm -f
     - docker network prune -f
     - docker-compose -f docker-compose-mini.yml config
