--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       - CONFIG_USE_MONGODB_PASS
       - CONFIG_USE_MONGODB_ATLAS
       - CONFIG_USE_DEBUG_MODE
+      - CONFIG_USE_HASHKEY_SERIAL_DEVICE
   webapp:
     build: 
       context: ./webapp
